refactor: Adding Goroutine for consume Client and update Docs
