# internal/domains/playlist/entity/playlist.go
@@ -1,6 +1,7 @@
 package entity
 
 type RandomPlaylist struct {
+	ID           string `json:"id"`
 	PlaylistName string `json:"playlist_name"`
 	Artist       string `json:"artist"`
 	Path         string `json:"path"`
@@ -11,8 +12,9 @@ type PlaylistResponse struct {
 	Playlists []RandomPlaylist `json:"playlists"`
 }
 
-func NewRandomPlaylist(name, artist, path, thumbnail string) *RandomPlaylist {
+func NewPlaylist(id string, name string, artist string, path string, thumbnail string) *RandomPlaylist {
 	return &RandomPlaylist{
+		ID:           id,
 		PlaylistName: name,
 		Artist:       artist,
 		Path:         path,
@@ -23,31 +25,5 @@ func NewRandomPlaylist(name, artist, path, thumbnail string) *RandomPlaylist {
 func NewPlaylistResponse(playlists []RandomPlaylist) *PlaylistResponse {
 	return &PlaylistResponse{
 		Playlists: playlists,
-	}
-}
-
-type Music struct {
-	Name      string `json:"music_name"`
-	Artist    string `json:"artist"`
-	Path      string `json:"path"`
-	Thumbnail string `json:"thumbnail"`
-}
-
-type MusicResponse struct {
-	Musics []Music `json:"musics"`
-}
-
-func NewMusic(name, artist, path, thumbnail string) *Music {
-	return &Music{
-		Name:      name,
-		Artist:    artist,
-		Path:      path,
-		Thumbnail: thumbnail,
-	}
-}
-
-func NewMusicResponse(musics []Music) *MusicResponse {
-	return &MusicResponse{
-		Musics: musics,
 	}
 }
